test/spec_vectors/func/fail/module_56.wat
(module (func $type-break-void-vs-num (result i32) (br 0) (i32.const 1)))